# quick_tax_estimator

./: 2025_amt_exemption_phaseout_thresholds.csv  2026_federal_tax_brackets.csv  2026_ltcg_brackets_federal.csv  2026_state_income_tax_brackets.csv  README.md  build_tax_data.py  pyproject.toml  stock_tax_estimator.py  tax_data.yaml
tax_csv_files/: 2025_amt_exemptions.csv  2025_federal_standard_deduction.csv  2025_ltcg_brackets_federal.csv  2025_state_income_tax_brackets.csv  2026_amt_exemption_phaseout_thresholds.csv  2026_amt_exemptions.csv  2026_federal_standard_deduction.csv
tests/: test_tax_data.py
