[project]
name = "stock-tax-estimator"
version = "0.1.0"
description = "Federal and state stock tax estimator"
authors = [
    {name = "Nick Lee"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
